--- a/paradestate.html
+++ b/paradestate.html
@@ -11,6 +11,7 @@
     input[type=text] { width: 100%; padding: 4px; }
     textarea { width: 100%; height: 200px; margin-top: 10px; }
     button { padding: 8px 12px; font-size: 16px; margin-top: 5px; }
+    .checkbox-col { text-align: center; }
 </style>
 </head>
 <body>
@@ -27,7 +28,7 @@
 <button type="button" onclick="copyToClipboard()">Copy</button>
 
 <script>
-// Your branch data
+// Branch data
 const BRANCHES = {
     "A Br": ["TW"],
     "B Br": ["KT", "SK", "ES", "TL"],
@@ -41,11 +42,13 @@ const container = document.getElementById("branches");
 
 // Generate table for each branch
 for (let branch in BRANCHES) {
-    let table = `<h3>${branch}</h3><table><tr><th>Name</th><th>Excuse (leave blank if present)</th></tr>`;
+    let table = `<h3>${branch}</h3><table>
+                    <tr><th>Name</th><th>Excuse</th><th>Present?</th></tr>`;
     BRANCHES[branch].forEach(name => {
         table += `<tr>
                     <td>${name}</td>
                     <td><input type="text" name="${branch}__${name}" placeholder="MC, leave, etc."></td>
+                    <td class="checkbox-col"><input type="checkbox" id="${branch}__${name}__present"></td>
                   </tr>`;
     });
     table += "</table>";
@@ -66,10 +69,17 @@ function calculateAttendance() {
     for (let branch in BRANCHES) {
         let members = BRANCHES[branch];
         let absentees = [];
+
         members.forEach(name => {
-            let val = document.querySelector(`[name='${branch}__${name}']`).value.trim();
-            if (val) absentees.push(`${name} (${val})`);
+            let excuse = document.querySelector(`[name='${branch}__${name}']`).value.trim();
+            let presentOverride = document.getElementById(`${branch}__${name}__present`).checked;
+
+            let isPresent = presentOverride || excuse === "";
+            if (!isPresent) {
+                absentees.push(`${name} (${excuse})`);
+            }
         });
+
         let presentCount = members.length - absentees.length;
         totalPresent += presentCount;
         totalPeople += members.length;
@@ -80,10 +90,17 @@ function calculateAttendance() {
     for (let branch in BRANCHES) {
         let members = BRANCHES[branch];
         let absentees = [];
+
         members.forEach(name => {
-            let val = document.querySelector(`[name='${branch}__${name}']`).value.trim();
-            if (val) absentees.push(`${name} (${val})`);
+            let excuse = document.querySelector(`[name='${branch}__${name}']`).value.trim();
+            let presentOverride = document.getElementById(`${branch}__${name}__present`).checked;
+
+            let isPresent = presentOverride || excuse === "";
+            if (!isPresent) {
+                absentees.push(`${name} (${excuse})`);
+            }
         });
+
         let presentCount = members.length - absentees.length;
         output += `${branch}: ${presentCount}/${members.length} present\n`;
         if (absentees.length > 0) {
@@ -107,4 +124,3 @@ function copyToClipboard() {
 
 </body>
 </html>
-
