--- a/paradestate.html
+++ b/paradestate.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <title>Parade State Compiler</title>
 <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
+    body { font-family: Arial, sans-serif; padding: 20px; font-size: 18px;}
     table { border-collapse: collapse; width: 100%; margin-bottom: 20px; }
     th, td { border: 1px solid #ccc; padding: 6px; text-align: left; }
     th { background-color: #f2f2f2; }
-    input[type=text] { width: 100%; padding: 4px; }
+    input[type=text] { width: 50%; padding: 4px; }
     textarea { width: 100%; height: 200px; margin-top: 10px; }
     button { padding: 8px 12px; font-size: 16px; margin-top: 5px; }
     .checkbox-col { text-align: center; }
@@ -124,3 +124,4 @@ function copyToClipboard() {
 
 </body>
 </html>
+
