--- a/paradestate.html
+++ b/paradestate.html
@@ -4,14 +4,14 @@
 <meta charset="UTF-8">
 <title>Parade State Compiler</title>
 <style>
-    body { font-family: Arial, sans-serif; padding: 20px; font-size: 18px;}
+    body { font-family: Arial, sans-serif; padding: 20px; font-size: 16px; }
     table { border-collapse: collapse; width: 100%; margin-bottom: 20px; }
     th, td { border: 1px solid #ccc; padding: 6px; text-align: left; }
     th { background-color: #f2f2f2; }
-    input[type=text] { width: 50%; padding: 4px; }
-    textarea { width: 100%; height: 200px; margin-top: 10px; }
+    input[type=text] { width: 50%; padding: 4px; font-size: 15px; }
+    input[type=checkbox] { transform: scale(1.2); }
+    textarea { width: 100%; height: 200px; margin-top: 10px; font-size: 15px; }
     button { padding: 8px 12px; font-size: 16px; margin-top: 5px; }
-    .checkbox-col { text-align: center; }
 </style>
 </head>
 <body>
@@ -40,15 +40,14 @@ const BRANCHES = {
 
 const container = document.getElementById("branches");
 
-// Generate table for each branch
+// Generate tables
 for (let branch in BRANCHES) {
-    let table = `<h3>${branch}</h3><table>
-                    <tr><th>Name</th><th>Excuse</th><th>Present?</th></tr>`;
+    let table = `<h3>${branch}</h3><table><tr><th>Name</th><th>Present?</th><th>Excuse</th></tr>`;
     BRANCHES[branch].forEach(name => {
         table += `<tr>
                     <td>${name}</td>
+                    <td style="text-align:center;"><input type="checkbox" name="${branch}__${name}__present"></td>
                     <td><input type="text" name="${branch}__${name}" placeholder="MC, leave, etc."></td>
-                    <td class="checkbox-col"><input type="checkbox" id="${branch}__${name}__present"></td>
                   </tr>`;
     });
     table += "</table>";
@@ -62,25 +61,26 @@ function formatDate() {
 }
 
 function calculateAttendance() {
-    let output = `*Parade State for ${formatDate()}*\n\n`;
+    let output = `Attendance for ${formatDate()}\n\n`;
     let totalPresent = 0;
     let totalPeople = 0;
 
     for (let branch in BRANCHES) {
         let members = BRANCHES[branch];
         let absentees = [];
+        let presentCount = 0;
 
         members.forEach(name => {
-            let excuse = document.querySelector(`[name='${branch}__${name}']`).value.trim();
-            let presentOverride = document.getElementById(`${branch}__${name}__present`).checked;
+            let val = document.querySelector(`[name='${branch}__${name}']`).value.trim();
+            let isPresentChecked = document.querySelector(`[name='${branch}__${name}__present']`).checked;
 
-            let isPresent = presentOverride || excuse === "";
-            if (!isPresent) {
-                absentees.push(`${name} (${excuse})`);
+            if (isPresentChecked || val === "") {
+                presentCount++;
+            } else {
+                absentees.push(`${name} (${val})`);
             }
         });
 
-        let presentCount = members.length - absentees.length;
         totalPresent += presentCount;
         totalPeople += members.length;
     }
@@ -90,18 +90,19 @@ function calculateAttendance() {
     for (let branch in BRANCHES) {
         let members = BRANCHES[branch];
         let absentees = [];
+        let presentCount = 0;
 
         members.forEach(name => {
-            let excuse = document.querySelector(`[name='${branch}__${name}']`).value.trim();
-            let presentOverride = document.getElementById(`${branch}__${name}__present`).checked;
+            let val = document.querySelector(`[name='${branch}__${name}']`).value.trim();
+            let isPresentChecked = document.querySelector(`[name='${branch}__${name}__present']`).checked;
 
-            let isPresent = presentOverride || excuse === "";
-            if (!isPresent) {
-                absentees.push(`${name} (${excuse})`);
+            if (isPresentChecked || val === "") {
+                presentCount++;
+            } else {
+                absentees.push(`${name} (${val})`);
             }
         });
 
-        let presentCount = members.length - absentees.length;
         output += `${branch}: ${presentCount}/${members.length} present\n`;
         if (absentees.length > 0) {
             output += `- _${absentees.join(", ")}_\n`;
@@ -124,4 +125,3 @@ function copyToClipboard() {
 
 </body>
 </html>
-
