--- a/paradestate.html
+++ b/paradestate.html
@@ -105,7 +105,7 @@ function calculateAttendance() {
         output += "\n";
     }
 
-    output = `*Parade State for ${formatDate()}*\n\nTOTAL: ${totalPresent}/${totalPeople} present\n\n` + output;
+    output = `*Parade State for ${formatDate()}*\n\nTOTAL: ${totalPresent}/${totalPeople}\n\n` + output;
     document.getElementById("output").value = output.trim();
 }
 
@@ -121,3 +121,4 @@ function copyToClipboard() {
 
 </body>
 </html>
+
