--- a/paradestate.html
+++ b/paradestate.html
@@ -34,7 +34,7 @@ const BRANCHES = {
     "B Br": ["KT", "SK", "ES", "TL"],
     "C Br": ["ZY", "WJ", "WZ", "SW", "AO"],
     "IDB ": ["IL", "MT"],
-    "DRB ": ["WY", "Cx"],
+    "DRB ": ["WY", "CN"],
     "DSB ": ["VO", "FL", "JY"]
 };
 
@@ -121,5 +121,6 @@ function copyToClipboard() {
 
 </body>
 </html>
+
 
 
